Return 200 instead of 202
